--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-boilerplate",
+    "name": "avkonnect-posts",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -32,6 +32,7 @@
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/node": "^17.0.21",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
         "eslint": "^8.10.0",
@@ -44,10 +45,16 @@
         "typescript": "^4.5.5"
     },
     "dependencies": {
+        "@fastify/cors": "^7.0.0",
+        "@masuviproductions/avkonnect-auth": "2.3.1",
         "aws-sdk": "^2.1082.0",
+        "axios": "^0.27.2",
         "dotenv": "^16.0.0",
+        "dynamoose": "^2.8.5",
         "fastify": "^3.27.2",
+        "mongoose": "^6.3.6",
         "serverless": "^3.4.0",
-        "serverless-http": "^2.7.0"
+        "serverless-http": "^2.7.0",
+        "uuid": "^8.3.2"
     }
 }
